[Ui] Fix tag input text color in dark mode

--- a/Biflow.Ui/wwwroot/scss/bootstrap.custom.scss
+++ b/Biflow.Ui/wwwroot/scss/bootstrap.custom.scss
@@ -61,6 +61,10 @@ $warning: #dfa100;
 [data-bs-theme="dark"] {
     --hx-autosuggest-item-highlighted-background-color: #{$gray-800};
     --hx-input-tags-dropdown-item-highlighted-background-color: #{$gray-800};
+    
+    .hx-input-tags-control input {
+        color: var(--bs-body-color);
+    }
 }
 
 $navbar-gradient: #8F75DA;
